[project]
name = "doped"
version = "2.0.4"
description = "Python package to setup, process and analyse solid-state defect calculations with VASP"
authors = [{name = "Seán Kavanagh", email = "sean.kavanagh.19@ucl.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    ]
requires-python = ">=3.8"
dependencies = [
    "tabulate",
    "matplotlib",
    "numpy>=1.21.0",
    "pymatgen>=2023.5.8",  # imposed by pymatgen-analysis-defects
    "pymatgen-analysis-defects>=2023.8.22",
    "shakenbreak>=3.2.0",
    "pandas",
]

[project.urls]
Homepage = "https://doped.readthedocs.io/en/latest/"
Documentation = "https://doped.readthedocs.io/en/latest/"
Package = "https://pypi.org/project/doped/"
Repository = "https://github.com/SMTG-UCL/doped"

[project.optional-dependencies]
tests = ["pytest>=7.1.3", "pytest-mpl>=0.16.1"]
docs = ["sphinx", "sphinx-book-theme", "sphinx_design"]
analysis = [
    "easyunfold",
    "py-sc-fermi",
    "sumo",
    "nonrad",
    #"CarrierCapture.jl"
]
pdf = ["pycairo"]

[tool.setuptools.packages.find]
exclude = ["examples*", "*testing", "tests*", "docs*"]

[tool.setuptools.package-data]
"doped.VASP_sets" = ["*.yaml"]
"doped.utils" = ["*.dat", "*.mplstyle"]
"doped.utils.legacy_pmg" = ["*.rst"]

[tool.black]
line-length = 107

[tool.ruff]
line-length = 107
pydocstyle.convention = "google"
isort.split-on-trailing-comma = false
select = [  # from pymatgen
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
  "E",   # pycodestyle error
  "EXE", # flake8-executable
  "F",   # pyflakes
  "FLY", # flynt
  "I",   # isort
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "PD",  # pandas-vet
  "PIE", # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "PYI", # flakes8-pyi
  "Q",   # flake8-quotes
  "RET", # flake8-return
  "RSE", # flake8-raise
  "RUF", # Ruff-specific rules
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TID", # tidy imports
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",   # pycodestyle warning
  "YTT", # flake8-2020
]
ignore = [
  "B028",    # No explicit stacklevel keyword argument found
  "D101",    # Missing docstring in public class (docstring in init instead)
  "D200",    # One-line docstring should fit on one line with quotes
  "D205",    # 1 blank line required between summary line and description
  "D212",    # Multi-line docstring summary should start at the first line
  "PLR2004", # Magic number
  "PLR",     # pylint refactor
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D102"]

[[tool.mypy.overrides]]
module = ["tabulate.*"]
ignore_missing_imports = true

[tool.docformatter]
recursive = true
pre-summary-newline = true
make-summary-multi-line = true
wrap-summaries = 79
wrap-descriptions = 79

[tool.codespell]
ignore-words-list = """
titel,te,bu,aack,unx,nd,efect
"""
